# Expense-tracker-backend

./: .dockerignore  .gitignore  .ruff.toml  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  nginx.conf  pyproject.toml  render.yaml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 2025_09_17_1020-1e540fa3ccb8_add_bank_balance_and_cash_balance_to_.py
src/: config.py  dependencies.py  main.py
src/db/: __init__.py  database.py
src/models/: __init__.py  budget.py  expense.py  user.py
src/repositories/: __init__.py  budget_repo.py  expense_repo.py  users_repo.py
src/routers/: __init__.py  auth.py  budget.py  expense.py
src/schemas/: __init__.py  budget.py  expense.py  users.py
src/services/: __init__.py  auth_service.py  budget_service.py  expense_service.py
tests/: conftest.py  test_auth.py  test_budget.py  test_config.py  test_db.py  test_dependencies.py  test_expenses.py  test_main.py  test_models.py  test_repositories.py  test_services.py
